--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     </div>
     <div class="container">
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact_us">
+            <h2 class="text-capitalize">Acheivements</h2>
+        </div>
+    </div>
+    <div><a href="https://en.wikipedia.org/wiki/Bournvita_Quiz_Contest" target="_blank">Bournvita Quiz contest</a></div>
+        <div><a href="https://en.wikipedia.org/wiki/World_Wide_Fund_for_Nature" target="_blank">World Wide Fund for Nature</a></div>
+    <div class="container">
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact_us">
             <h2 class="text-capitalize">Contact us</h2>
         </div>
     </div>
